--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
-    "@igortrindade/lazyfy": "^1.1.4",
+    "@igortrindade/lazyfy": "^1.3.0",
     "@igortrindade/vue-number-format": "^1.5.1",
     "@pinia/nuxt": "^0.4.2",
+    "apexcharts": "^3.36.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.29.1",
+    "dayjs": "^1.11.6",
     "dompurify": "^2.3.8",
     "logrocket": "^3.0.1",
     "mitt": "^3.0.0",
@@ -38,6 +41,7 @@
     "tailwind-config-viewer": "^1.6.2",
     "vue-gtag": "^2.0.1",
     "vue-inline-svg": "^3.1.0",
-    "vue-the-mask": "^0.11.1"
+    "vue-the-mask": "^0.11.1",
+    "vue3-apexcharts": "^1.4.1"
   }
 }
