--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@igortrindade/lazyfy": "^1.3.0",
     "@igortrindade/vue-number-format": "^1.5.1",
     "@pinia/nuxt": "^0.4.2",
+    "@vercel/analytics": "^0.1.3",
     "apexcharts": "^3.36.0",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
