--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "date-fns": "^2.29.1",
     "dayjs": "^1.11.6",
     "dompurify": "^2.3.8",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "logrocket": "^3.0.1",
     "mitt": "^3.0.0",
     "pell": "^1.0.6",
