--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vue-gtag": "^2.0.1",
     "vue-inline-svg": "^3.1.0",
     "vue-the-mask": "^0.11.1",
-    "vue3-apexcharts": "^1.4.1"
+    "vue3-apexcharts": "^1.4.1",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.1/xlsx-0.19.1.tgz"
   }
 }
