--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "6.1.3",
+    "@types/memory-cache": "^0.2.2",
     "concurrently": "^7.2.0",
     "nuxt": "^3.0.0-rc.13",
     "sass": "^1.51.0",
@@ -35,6 +36,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.25",
     "logrocket": "^3.0.1",
+    "memory-cache": "^0.2.0",
     "mitt": "^3.0.0",
     "pell": "^1.0.6",
     "pinia": "^2.0.14",
